# 2025_1

./: .gitignore  NOTICE.md  pyproject.toml
src/: callbacks.py  config.py  eval.py  experiment.py  network.py  optimizer.py  plot_events.py  train.py
src/soap/: soap.py
tensorboard_logs/atari/adam/PPO_1/: events.out.tfevents.1754399432.NakoPC.53769.0
tensorboard_logs/atari/adam/PPO_2/: events.out.tfevents.1754401427.NakoPC.82751.0
tensorboard_logs/atari/muon/PPO_1/: events.out.tfevents.1754400652.NakoPC.71862.0
tensorboard_logs/atari/soap/PPO_1/: events.out.tfevents.1754402222.NakoPC.94780.0
tensorboard_logs/mujoco/muon/PPO_1/: events.out.tfevents.1754393830.NakoPC.18960.0
tensorboard_logs/mujoco/muon/PPO_2/: events.out.tfevents.1754400617.NakoPC.71215.0
tensorboard_logs/{seed}/atari/{optimizer_name}/PPO_1/: events.out.tfevents.1754412849.NakoPC.161229.1
tensorboard_logs/{seed}/mujoco/{optimizer_name}/PPO_1/: events.out.tfevents.1754411798.NakoPC.161229.0
